3)_finished_removed_global_variables

--- a/U1 (01.02.2022)/Averager/1) Input fields - min, max, size, value, parseInt()/index.html
+++ b/U1 (01.02.2022)/Averager/1) Input fields - min, max, size, value, parseInt()/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div id="button_test_1">Console log</div>
+  <input id="input_test1" type="number" size="2" max="17" min="1" >
   <script src="index.js"></script>
 
 </body>
